--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,12 +10,14 @@ set-window-option -g utf8 on
 # ウィンドウ名が自動的に更新されないようにする
 # set-window-option -g automatic-rename off
 set-window-option -g mode-keys vi
+set-window-option -g mode-mouse on
 set-option -g mouse-select-pane on
 set-option -g base-index 1
 
 # ウィンドウマネージャ向けのタイトル
 set-option -g set-titles on
-set-option -g set-titles-string "#T \"#W\"(#I/#P) @ #H"
+#set-option -g set-titles-string "#T \"#W\"(#I/#P) @ #H"
+set-option -g set-titles-string "#10(whoami)@#10H: #10W"
 
 # Use 256-color terminal
 set-option -g default-terminal "screen-256color"
@@ -30,9 +32,9 @@ set-option -g status-right-length 100
 # 左側に表示する内容
 set-option -g status-left ""
 # 右側に表示する内容
-set-option -g status-right "[#20(whoami)@#H][#(cat /proc/loadavg|cut -d' ' -f1)][%Y/%m/%d(%a)%H:%M]"
+set-option -g status-right "[#10(whoami)@#10H][#(cat /proc/loadavg|cut -d' ' -f1)][%m/%d|%H:%M]"
 
-bind C-r source-file ~/.tmux.conf \; display-message "source-file done"
+bind C-r source-file ~/.tmux.conf \; display-message "reloaded, enjoy!"
 
 # Select pane
 bind -r h select-pane -L
