Change to using powerline

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+# load powerline plugin
+source ~/powerline/powerline/bindings/tmux/powerline.conf
+
 # Prefix
 unbind C-b
 set-option -g prefix C-q
@@ -23,19 +26,9 @@ set-option -g set-titles-string "#10(whoami)@#10H: #10W"
 set-option -g default-terminal "screen-256color"
 #set-option -g default-terminal "xterm-256color"
 
-# ステータスライン
-# ステータス行を更新する間隔
-set-option -g status-interval 5
-# 表示する長さ
-set-option -g status-left-length 100
-set-option -g status-right-length 100
-# 左側に表示する内容
-set-option -g status-left ""
-# 右側に表示する内容
-set-option -g status-right "[#10(whoami)@#10H][#(cat /proc/loadavg|cut -d' ' -f1)][%m/%d|%H:%M]"
-
 bind C-r source-file ~/.tmux.conf \; display-message "reloaded, enjoy!"
 
+## Bindings
 # Select pane
 bind -r h select-pane -L
 bind -r j select-pane -D
