--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,28 +3,27 @@ source ~/powerline/powerline/bindings/tmux/powerline.conf
 
 # Prefix
 unbind C-b
-set-option -g prefix C-q
+set -g prefix C-q
 bind C-b send-prefix
 
-set-option -g history-limit 10000
+set -g history-limit 10000
 
 # UTF-8 を使う
-set-window-option -g utf8 on
+setw -g utf8 on
 # ウィンドウ名が自動的に更新されないようにする
 # set-window-option -g automatic-rename off
-set-window-option -g mode-keys vi
-set-window-option -g mode-mouse on
-set-option -g mouse-select-pane on
-set-option -g base-index 1
+setw -g mode-keys vi
+setw -g mode-mouse on
+set -g mouse-select-pane on
+set -g base-index 1
 
 # ウィンドウマネージャ向けのタイトル
-set-option -g set-titles on
+set -g set-titles on
 #set-option -g set-titles-string "#T \"#W\"(#I/#P) @ #H"
-set-option -g set-titles-string "#10(whoami)@#10H: #10W"
+set -g set-titles-string "#10(whoami)@#10H: #10W"
 
 # Use 256-color terminal
-set-option -g default-terminal "screen-256color"
-#set-option -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 
 bind C-r source-file ~/.tmux.conf \; display-message "reloaded, enjoy!"
 
