--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # load powerline plugin
-source ~/powerline/powerline/bindings/tmux/powerline.conf
+#source ~/powerline/powerline/bindings/tmux/powerline.conf
 
-# Prefix
+## Prefix
 unbind C-b
 set -g prefix C-q
 bind C-b send-prefix
@@ -12,10 +12,8 @@ set -g history-limit 10000
 setw -g utf8 on
 # ウィンドウ名が自動的に更新されないようにする
 # set-window-option -g automatic-rename off
-setw -g mode-keys vi
-setw -g mode-mouse on
-set -g mouse-select-pane on
 set -g base-index 1
+set -g renumber-windows on
 
 # ウィンドウマネージャ向けのタイトル
 set -g set-titles on
@@ -27,7 +25,20 @@ set -g default-terminal "screen-256color"
 
 bind C-r source-file ~/.tmux.conf \; display-message "reloaded, enjoy!"
 
+# Mouse
+setw -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+
 ## Bindings
+
+# Use vi-style key bindings in copy and choice mode.
+setw -g mode-keys vi
+
+# Copy mode
+bind -t vi-copy v begin-selection # Mark start with `v' key
+bind -t vi-copy y copy-selection  # Yank with `y' key
+
 # Select pane
 bind -r h select-pane -L
 bind -r j select-pane -D
@@ -39,4 +50,48 @@ bind -r H resize-pane -L
 bind -r J resize-pane -D
 bind -r K resize-pane -U
 bind -r L resize-pane -R
+
+#bind C-p run-shell "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
+#bind C-y run-shell "tmux show-buffer | xclip -sel clip -i"
+bind C-p run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
+
+## Statusline
+
+# default statusbar colors
+set -g status-fg white
+set -g status-bg black
+set -g status-attr default
+
+# default window title colors
+setw -g window-status-fg cyan
+setw -g window-status-bg default
+#setw -g window-status-attr dim
+
+# active window title colors
+setw -g window-status-current-fg white
+setw -g window-status-current-bg red
+#setw -g window-status-current-attr bright
+
+# command/message line colors
+set -g message-fg white
+set -g message-bg black
+set -g message-attr bright
+ 
+# # Refresh the status bar every 30 seconds.
+#set -g status-interval 30
+
+# The status bar itself.
+setw -g window-status-format "#I|#W#F"
+setw -g window-status-current-format " #I#[default]|#[default]#W#F "
+#set -g status-justify centre
+#set -g status-left-length 40
+set -g status-left "#S"
+set -g status-left-bg black
+set -g status-left-fg colour255
+set -g status-right-bg colour250
+set -g status-right-fg colour239
+set -g status-right " %l:%M %p "
+#setw -g window-status-separator " "
+
+#set -g display-time 1000
 
