--- a/install/xorg.yml
+++ b/install/xorg.yml
@@ -11,6 +11,9 @@
       with_items:
         - { path: '.xinitrc', dest: '.xinitrc' }
         - { path: '.Xresources.d', dest: '.Xresources.d' }
+    - name: Touchpad setting
+      copy: src=50-synaptics.conf dest=/etc/X11/xorg.conf.d/50-synaptics.conf
+      sudo: yes
 
     - name: Set X keyboard layout
       command: localectl set-x11-keymap us pc104 ,dvorak ctrl:swapcaps
