Update installation scripts

--- a/install/keysnail.yml
+++ b/install/keysnail.yml
@@ -5,6 +5,8 @@
   tasks:
     - name: Download keysnail.xpi
       get_url: dest=/tmp url=https://raw.githubusercontent.com/mooz/keysnail/master/keysnail.xpi
+    - name: Setup .keysnail.js
+      file: src=~/dotfiles/.keysnail.js dest=~/.keysnail.js state=link
     - name: Install keysnail to firefox
       command: firefox keysnail.xpi chdir=/tmp
 
