--- a/install/wireless.yml
+++ b/install/wireless.yml
@@ -1,8 +1,11 @@
 ---
-- hosts: archletsnote
+- hosts: archnote
   user: root
+  sudo: yes
   vars:
     - ansible_python_interpreter: /usr/bin/python2
   tasks:
     - pacman: name=iw,wpa_supplicant
-#    - copy: src=example.comf dest=/etc/wpa_supplicant/example.conf
+    - copy: src=wireless.conf dest=/etc/wpa_supplicant/wireless.conf
+    - copy: src=network-wireless@.service dest=/etc/systemd/system/network-wireless@.service
+    - service: name=network-wireless enabled=yes state=started args=wlp10s0
