--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,43 +1,20 @@
-# load powerline plugin
-#source ~/powerline/powerline/bindings/tmux/powerline.conf
-
 ## Prefix
 unbind C-b
 set -g prefix C-q
 bind C-b send-prefix
 
-set -g history-limit 10000
-
-# UTF-8 を使う
-setw -g utf8 on
-# ウィンドウ名が自動的に更新されないようにする
-# set-window-option -g automatic-rename off
-set -g base-index 1
-set -g renumber-windows on
-
-# ウィンドウマネージャ向けのタイトル
-set -g set-titles on
-#set-option -g set-titles-string "#T \"#W\"(#I/#P) @ #H"
-set -g set-titles-string "#10(whoami)@#10H: #10W"
-
-# Use 256-color terminal
-set -g default-terminal "screen-256color"
-
-bind C-r source-file ~/.tmux.conf \; display-message "reloaded, enjoy!"
-
-# Mouse
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-
-## Bindings
+## Key Bindings
 
 # Use vi-style key bindings in copy and choice mode.
 setw -g mode-keys vi
 
-# Copy mode
-bind -t vi-copy v begin-selection # Mark start with `v' key
-bind -t vi-copy y copy-selection  # Yank with `y' key
+bind C-r source-file ~/.tmux.conf \; display-message "Config reloaded"
+
+bind N new-window
+
+# Split window
+bind | split-window -h
+bind - split-window -v
 
 # Select pane
 bind -r h select-pane -L
@@ -51,47 +28,46 @@ bind -r J resize-pane -D
 bind -r K resize-pane -U
 bind -r L resize-pane -R
 
-#bind C-p run-shell "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
-#bind C-y run-shell "tmux show-buffer | xclip -sel clip -i"
-bind C-p run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
+## Misc
+
+# Use 256-color terminal
+set -g default-terminal "screen-256color"
+
+set -sg escape-time 10
+set -g base-index 1
+set -g mouse on
+
+set -g set-titles on
+set -g set-titles-string "[#S] #W - #H"
 
 ## Statusline
 
 # default statusbar colors
 set -g status-fg white
-set -g status-bg black
+set -g status-bg colour234
 set -g status-attr default
 
 # default window title colors
-setw -g window-status-fg cyan
+setw -g window-status-fg colour249
 setw -g window-status-bg default
-#setw -g window-status-attr dim
 
 # active window title colors
 setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-#setw -g window-status-current-attr bright
+setw -g window-status-current-bg colour31
 
 # command/message line colors
 set -g message-fg white
 set -g message-bg black
 set -g message-attr bright
- 
-# # Refresh the status bar every 30 seconds.
-#set -g status-interval 30
 
 # The status bar itself.
-setw -g window-status-format "#I|#W#F"
-setw -g window-status-current-format " #I#[default]|#[default]#W#F "
-#set -g status-justify centre
-#set -g status-left-length 40
-set -g status-left "#S"
-set -g status-left-bg black
-set -g status-left-fg colour255
+setw -g window-status-format " #I │ #W#F "
+setw -g window-status-current-format " #I#[default] │ #[default]#W#F "
+
+set -g status-left " #S "
+set -g status-left-bg colour250
+set -g status-left-fg colour239
+
 set -g status-right-bg colour250
 set -g status-right-fg colour239
-set -g status-right " %l:%M %p "
-#setw -g window-status-separator " "
-
-#set -g display-time 1000
-
+set -g status-right " #T │ %l:%M %p "
