--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,6 +32,7 @@ bind -r L resize-pane -R
 
 # Use 256-color terminal
 set -g default-terminal "screen-256color"
+set -ga terminal-overrides ",xterm-256color*:Tc"
 
 set -sg escape-time 10
 set -g base-index 1
