update style config to newer syntax

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,31 +44,23 @@ set -g set-titles-string "[#S] #W - #H"
 ## Statusline
 
 # default statusbar colors
-set -g status-fg white
-set -g status-bg colour234
-set -g status-attr default
+set -g status-style fg=white,bg=colour234
 
 # default window title colors
-setw -g window-status-fg colour249
-setw -g window-status-bg default
+setw -g window-status-style fg=colour249
 
 # active window title colors
-setw -g window-status-current-fg white
-setw -g window-status-current-bg colour31
+setw -g window-status-current-style fg=white,bg=colour31
 
 # command/message line colors
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+set -g message-style fg=white,bg=black,bright
 
 # The status bar itself.
 setw -g window-status-format " #I │ #W#F "
-setw -g window-status-current-format " #I#[default] │ #[default]#W#F "
+setw -g window-status-current-format " #I │ #W#F "
 
 set -g status-left " #S "
-set -g status-left-bg colour250
-set -g status-left-fg colour239
+set -g status-left-style fg=colour239,bg=colour250
 
-set -g status-right-bg colour250
-set -g status-right-fg colour239
 set -g status-right " #T │ %l:%M %p "
+set -g status-right-style fg=colour239,bg=colour250
