--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,8 +10,6 @@ setw -g mode-keys vi
 
 bind C-r source-file ~/.tmux.conf \; display-message "Config reloaded"
 
-bind N new-window
-
 # Split window
 bind | split-window -h
 bind - split-window -v
@@ -36,6 +34,8 @@ set -ga terminal-overrides ",xterm-256color*:Tc"
 
 set -sg escape-time 10
 set -g base-index 1
+set -g renumber-windows on
+
 set -g mouse on
 
 set -g set-titles on
