move configs to xdg dir

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -63,5 +63,5 @@ setw -g window-status-current-format " #I │ #W#F "
 set -g status-left " #S "
 set -g status-left-style fg=colour239,bg=colour250
 
-set -g status-right " #T │ %l:%M %p "
+set -g status-right " #h │ %l:%M %p "
 set -g status-right-style fg=colour239,bg=colour250
